# book2md

./: .gitignore  LICENSE  README.md  pyproject.toml
book2md/: cli.py  core.py
book2md/adapters/: file.py
book2md/templates/: book.yml
tests/: test_core.py
